Removed my problematic earlier commit that used a File reference passes to .byValue. Now it more sensibly allows a .byReference(File) factory, thus making it clear that the file referenced must be left in place until the client is done.